implemented endpoint with tests